# viz

./: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  server.py
.cargo/: config.toml
src/: lib.rs  main.rs  render.rs
src/wasm/: render.rs
static/: index.html
tests/: aspect.rs  web.rs
