[package]
name = "viz_wasm"
version = "0.1.0"
edition = "2021"

# build.rs will output static site
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlCanvasElement", "WebGl2RenderingContext",
    "console", "Performance", "DomException", "HtmlElement",
] }

[build-dependencies]
fs_extra = "1.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
