[package]
name = "viz_wasm"
version = "0.1.0"
edition = "2021"

# build.rs will output static site
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlCanvasElement", "WebGl2RenderingContext",
    "WebGlProgram", "WebGlShader", "WebGlBuffer", "WebGlUniformLocation",
    "console", "Performance", "DomException", "HtmlElement", "Element",
    "KeyboardEvent", "WebGlVertexArrayObject", "WebGlTexture", "WebGlFramebuffer",
    "CssStyleDeclaration",
] }

[build-dependencies]
fs_extra = "1.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Favour fast build times for iterative development; size can be optimised later
# via `wasm-opt` or enabling LTO explicitly when doing a production build.
opt-level = "s"       # keep binaries small
lto = false            # disabling LTO shortens link time considerably
debug = false          # omit DWARF to keep .wasm small and speed up linking

# ------------------------------------------------------------------------------------
# wasm-pack configuration
# ------------------------------------------------------------------------------------
[package.metadata.wasm-pack.profile.release]
wasm-opt = false       # skip wasm-opt; use it manually in CI for final artifacts
